--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,56 +1,85 @@
 ---
-layout: page
+layout: compress
 ---
-<div id="post">
-  <section class="post-header">
-    <h1 class="title">{{ page.title }}</h1>
-    <p class="subtitle">{{ page.subtitle }}</p>
-    <p class="meta">
-      {{ page.date | date: "%B %-d, %Y" }}
-    </p>
+
+<!DOCTYPE html>
+<html>
+
+<head>
+  {% include head.html %}
+</head>
+
+<body>
+  {% include navbar.html %}
+
+  <section class="hero is-fullheight has-text-centered" id="post">
+    <div class="hero-body">
+      <div class="container">
+        <a href="{{page.url | relative_url}}" class="has-text-black" id="title">
+          <h1 class="title has-text-centered is-2 has-text-weight-semibold ">{{page.title}}</h1>
+        </a>
+        <hr class="has-background-black">
+        <div class="columns is-variable is-5">
+          <div class="column is-6">
+            <figure class="image is-16by9 has-shadow">
+              <img src="{{page.post-image}}" alt="{{post.title}}" id="post-image">
+            </figure>
+          </div>
+          <div class="subtitle column is-5 has-text-left-desktop has-text-left-fullhd has-text-left-tablet has-text-center-mobile">
+            {% unless page.description.size == 0 %}
+            <p id="description" class="content is-small has-text-weight-medium is-uppercase">{{page.description | strip | strip_html | strip_newlines }}</p>
+            {% endunless %}
+            <p class="subtitle is-6 is-uppercase has-text-weight-normal has-text-black-ter">Published on
+              <b>{{ page.date | date: "%-B %d, %Y" }}</b> by <a href="{% if site.author-url %}{{site.author-url}}{% else %}{{site.url}}{{site.baseurl}}/#about{% endif %}" target="_blank"><b class="has-text-link"><u>{{site.author-name}}</u></b>
+              </a>
+            </p>
+            {%- assign tags = page.tags -%}
+            {%- unless tags.size == 0 -%}
+            <p class="subtitle is-uppercase">
+              <i class="fas fa-tags"></i>
+              {% assign i = 0 %}
+              {% for tags in page.tags %}
+              <span class="tag is-link">{{page.tags[i]}}</span>
+              {% assign i = i | plus:1 %}
+              {% endfor %}
+            </p>
+            {%- endunless -%}
+            {% assign words = content | number_of_words %}
+            {%- unless content.size == 0 -%}
+            <p class="subtitle is-uppercase"><i class="fas fa-clock"></i> <b class="has-text-link">
+                {{ words | divided_by:180 }} min
+              </b>READ</p>
+            {%- endunless -%}
+          </div>
+        </div>
+        <div class="content has-text-justified-desktop has-text-justified-fullhd has-text-justified has-text-justified-tablet has-text-left-mobile">
+          <p>{{ content }}</p>
+        </div>
+        {% unless site.disqus-shortname == "" %}
+        <div class="disqus-comments" id="disqus_thread"></div>
+        {% endunless %}
+      </div>
+    </div>
   </section>
-  <section class="post-content">
-    {{ content }}
-  </section>
-</div>
-
-<div id="top" class="top-btn" onclick="moveTop()">
-  <i class="fas fa-chevron-up"></i>
-</div>
-
-<!-- Disqus -->
-{% if site.theme_settings.disqus_shortname and page.comments %}
-<div id="comments">
-  <div class="border">
-    {% include disqus.html %}
-  </div>
-</div>
-{% endif %}
-
-<!-- Footer -->
-{% include footer.html %}
-
+  {% include footer.html %}
+</body>
 <script>
-  var lastScrollTop = 0;
-  window.onscroll = function () {
-    var st = document.body.scrollTop || document.documentElement.scrollTop;
-    if (st > 250) {
-      document.getElementById("top").style.display = "block"
-      if (st > lastScrollTop) {
-        document.getElementById("top").style.opacity = 0
-      } else {
-        document.getElementById("top").style.opacity = 1
-      }
-    } else {
-      document.getElementById("top").style.opacity = 0
-      if (st > lastScrollTop) {
-        document.getElementById("top").style.display = "none"
-      }
-    }
-    lastScrollTop = st <= 0 ? 0 : st;
-  }
-  function moveTop() {
-    document.body.scrollTop = 0
-    document.documentElement.scrollTop = 0
-  }
+  /**
+   *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+   *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+  /*
+  var disqus_config = function () {
+  this.page.url = PAGE_URL;  Replace PAGE_URL with your page's canonical URL variable
+  this.page.identifier = PAGE_IDENTIFIER; Replace PAGE_IDENTIFIER with your page's unique identifier variable
+  };
+  */
+  (function () { /* DON'T EDIT BELOW THIS LINE */
+    var d = document,
+      s = d.createElement('script');
+    s.src = 'https://{{site.disqus-shortname}}.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+  })();
 </script>
+
+</html>
